2005-09-11  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/base/delegates/editor.py:
	  lib/gaupol/base/delegates/filereader.py:
	  Minor fixes.

	* lib/gaupol/base/delegates/filewriter.py: Minor fixes.
	  (FileWriter._write_file): Use temp directory for backup.

	* lib/gaupol/constants.py: NEWLINE and FORMAT UI_NAMES are now
	  translatable.

2005-09-11  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/base/colcons.py:
	  lib/gaupol/constants.py:
	  Replaced vague attributes NAMES with CLASS_NAMES, ID_NAMES and
	  UI_NAMES and fixed all references in other modules to attribute
	  NAMES.

	* lib/gaupol/base/data.py (Data._assign_delegations):
	  Fixed automatic delegate listing.

	* lib/gaupol/base/delegates/classes.py (get_delegate_names):
	  Replaces function get_delegates.

	* lib/gaupol/base/delegates/delegate.py: Fixed docstring.

	* lib/gaupol/base/delegates/filewriter.py: Beautified logger messages.

	* lib/gaupol/gtk/colcons.py: Removed trailing space.

	* lib/gaupol/gtk/util/clipboard.py: Docstring fixes.
	  (Clipboard.set_data): Use unicode string.

	* lib/gaupol/gtk/util/config.py: Completely rewritten.

	* lib/gaupol/gtk/util/gui.py: Minor fixes.

2005-09-08  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/base/util/internet.py:
	  lib/gaupol/base/util/langlib.py:
	  lib/gaupol/gtk/cellrend/custom.py:
	  lib/gaupol/gtk/delegates/fileopener.py:
	  lib/gaupol/gtk/delegates/filesaver.py:
	  lib/gaupol/gtk/dialogs/about.py:
	  lib/gaupol/gtk/project.py:
	  lib/gaupol/gtk/util/gui.py:
	  Minor docstring fixes.

2005-09-08  Osmo Salomaa  otsaloma@cc.hut.fi

	* data/glade/prefs-dialog.glade: Changed encoding preferences.

2005-09-08  Osmo Salomaa  otsaloma@cc.hut.fi

	* data/glade/encoding-dialog.glade:
	  data/glade/insertsub-dialog.glade:
	  data/glade/multiclose-dialog.glade:
	  Minor fixes.

	* data/glade/language-dialog.glade:
	  data/ui/menubar.xml:
	  Terminology fixes.

	* data/glade/prefs-dialog.glade:
	  Added a notebook. Added file preferences.
